# digital_CO2_footprint

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: app.py  assumptions.yaml  calculator.py  loader.py  translations.py
